[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/titlemenu_settingsbase.png" type="Texture" id=2]
[ext_resource path="res://ui/settings.gd" type="Script" id=3]
[ext_resource path="res://ui/titlemenu_music_click.png" type="Texture" id=4]
[ext_resource path="res://ui/titlemenu_settingsclick.png" type="Texture" id=5]
[ext_resource path="res://ui/titlemenu_settingsmouseover.png" type="Texture" id=6]
[ext_resource path="res://ui/ui_ninepatch.png" type="Texture" id=7]
[ext_resource path="res://ui/titlemenu_sound_base.png" type="Texture" id=8]
[ext_resource path="res://ui/titlemenu_sound_mouseover.png" type="Texture" id=9]
[ext_resource path="res://ui/titlemenu_music_mouseover.png" type="Texture" id=12]
[ext_resource path="res://ui/titlemenu_music_base.png" type="Texture" id=13]
[ext_resource path="res://ui/titlemenu_sound_click.png" type="Texture" id=15]
[ext_resource path="res://sound/ui_click.ogg" type="AudioStream" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.486275, 0.486275, 0.486275, 0 ), Color( 0.537255, 0.537255, 0.537255, 0.368627 ) ]
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/font/countrygold/country_gold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = SubResource( 2 )

[node name="SettingsInfo" type="Control"]
pause_mode = 2
light_mask = 0
margin_right = 72.0
margin_bottom = 78.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 16 )
bus = "SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.486275, 0.486275, 0.486275, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fading" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
anims/Fade = SubResource( 1 )

[node name="SettingIconMargin" type="MarginContainer" parent="CanvasLayer"]
pause_mode = 2
light_mask = 0
margin_left = 1200.0
margin_top = 7.0
margin_right = 1272.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer/SettingIconMargin"]
pause_mode = 2
light_mask = 0
margin_right = 72.0
margin_bottom = 78.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="SettingsLabelBase" type="NinePatchRect" parent="CanvasLayer/SettingIconMargin/SettingsButton"]
pause_mode = 2
light_mask = 0
margin_left = -120.0
margin_top = 80.0
margin_right = 60.0
margin_bottom = 118.0
texture = ExtResource( 7 )
region_rect = Rect2( -0.109245, -0.00251293, 72.0668, 72.1922 )
patch_margin_left = 6
patch_margin_top = 3
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="CanvasLayer/SettingIconMargin/SettingsButton/SettingsLabelBase"]
pause_mode = 2
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
custom_colors/font_color_shadow = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_fonts/font = SubResource( 3 )
text = "Settings - Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="MarginContainer" parent="CanvasLayer"]
pause_mode = 2
light_mask = 0
margin_left = 1048.0
margin_top = 8.0
margin_right = 1208.0
margin_bottom = 98.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButtons" type="HBoxContainer" parent="CanvasLayer/SettingsMenu"]
pause_mode = 2
light_mask = 0
margin_right = 160.0
margin_bottom = 90.0

[node name="ToggleSFX" type="TextureButton" parent="CanvasLayer/SettingsMenu/SettingButtons"]
pause_mode = 2
light_mask = 0
margin_right = 72.0
margin_bottom = 90.0
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 9 )

[node name="ToggleMusic" type="TextureButton" parent="CanvasLayer/SettingsMenu/SettingButtons"]
pause_mode = 2
light_mask = 0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 90.0
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 12 )

[connection signal="mouse_entered" from="CanvasLayer/SettingIconMargin/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/SettingIconMargin/SettingsButton" to="." method="_on_SettingsButton_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/SettingIconMargin/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsMenu/SettingButtons/ToggleSFX" to="." method="_on_ToggleSFX_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsMenu/SettingButtons/ToggleMusic" to="." method="_on_ToggleMusic_pressed"]
